# TextEditor

./: .gitignore  CMakeLists.txt
include/: CursorProcessor.h  File.h  GuiController.h  KeyController.h  TextController.h  common.h  utils.h
src/: CursorProcessor.cpp  File.cpp  GuiController.cpp  KeyController.cpp  TextController.cpp  main.cpp
